# videre

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
app/: index.html  package-lock.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  protocols.rs  state.rs
crates/dupe/: Cargo.toml
crates/dupe-core/: Cargo.toml
crates/dupe-core/src/: embeddings.rs  face_db.rs  heic.rs  lib.rs  location.rs  thumb_cache.rs  vectors.rs
crates/dupe-ml/: Cargo.toml
crates/dupe-ml/src/: face_align.rs  face_detect.rs  face_embed.rs  face_models.rs  lib.rs  model.rs  pipeline.rs  preprocess.rs  search.rs
crates/dupe-ml/tests/: faces_pipeline.rs  watch.rs
crates/dupe/src/: hasher.rs  lib.rs  main.rs  sqlite_output.rs
crates/dupe/tests/: faces_server.rs  report.rs
crates/videre/: Cargo.toml
crates/videre-api/: Cargo.toml
crates/videre-api/src/: error.rs  faces.rs  images.rs  label.rs  lib.rs  types.rs
crates/videre-core/: Cargo.toml
crates/videre-core/src/: db.rs  face_cluster.rs  face_db.rs  home.rs  lib.rs  location.rs  person_search.rs  progress.rs  thumb_cache.rs
crates/videre-ml/: Cargo.toml
crates/videre-ml/src/: device.rs  face_detect.rs  face_embed.rs  face_models.rs  lib.rs  model.rs  pipeline.rs  search.rs
crates/videre-ml/tests/: person_search.rs
crates/videre/src/: main.rs  output.rs  scanner.rs  sqlite_output.rs  types.rs
crates/videre/src/commands/: config.rs  dedupe.rs  embed.rs  faces.rs  fix_dates.rs  mcp.rs  mod.rs  prune.rs  report.rs  scan.rs  search.rs  watch.rs
crates/videre/tests/: config.rs  faces_pipeline.rs  faces_server.rs  integration.rs  mcp.rs  person_search.rs  prune.rs  report.rs  scan.rs  watch.rs
docs/superpowers/plans/: 2026-06-09-dupe.md  2026-06-10-exif-extraction.md  2026-07-08-image-search.md  2026-07-09-report-search.md  2026-07-10-dupe-faces.md  2026-07-12-date-grouping-and-lightbox-metadata-plan.md  2026-07-13-dupe-watch-plan.md  2026-07-13-videre-rename-single-binary.md  2026-07-14-home-dir-defaults.md  2026-07-14-json-output.md  2026-07-15-mcp-server.md  2026-07-16-embed-progress-ui.md  2026-07-16-faces-progress-ui.md  2026-07-16-scan-dedupe-split.md  2026-07-16-scan-progress-ui.md  2026-07-17-faces-ui-fixes.md  2026-07-23-tauri-app-commands.md  2026-07-23-tauri-react-faces-ui.md  2026-07-23-videre-api-facade.md
docs/superpowers/specs/: 2026-06-09-dupe-design.md  2026-06-10-exif-extraction-design.md  2026-07-08-image-search-design.md  2026-07-09-report-search-design.md  2026-07-10-dupe-faces-design.md  2026-07-12-date-grouping-design.md  2026-07-13-dupe-watch-design.md  2026-07-14-home-dir-defaults-design.md  2026-07-14-json-output-design.md  2026-07-14-mcp-server-design.md  2026-07-16-embed-progress-ui-design.md  2026-07-16-faces-progress-ui-design.md  2026-07-16-scan-dedupe-split-design.md  2026-07-16-scan-progress-ui-design.md  2026-07-17-faces-ui-fixes-design.md  2026-07-23-desktop-app-design.md
src/: hasher.rs  main.rs  output.rs  scanner.rs  sqlite_output.rs  types.rs
tests/: integration.rs
