[package]
name = "dupe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dupe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = "1"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
kamadak-exif = "0.5"

[dev-dependencies]
tempfile = "3"
