[package]
name = "dupe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reverse_geocoder = "4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

[dev-dependencies]
tempfile = "3"
