[package]
name = "dupe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dupe"
path = "src/main.rs"

[[bin]]
name = "dupe-report"
path = "src/bin/dupe_report.rs"

[[bin]]
name = "dupe-fix-dates"
path = "src/bin/dupe_fix_dates.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = "1"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
kamadak-exif = "0.5"
filetime = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dupe-core = { path = "../dupe-core" }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
dupe-core = { path = "../dupe-core" }
