[package]
name = "videre-api"
version = "0.4.1"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
videre-core = { path = "../videre-core" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
kamadak-exif = "0.5"
