[package]
name = "videre-core"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
half = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
indicatif = "0.17"
reverse_geocoder = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"
