[package]
name = "videre"
version = "0.1.0"
edition = "2021"

[lib]
name = "videre"
path = "src/lib.rs"

[[bin]]
name = "dupe"
path = "src/main.rs"

[[bin]]
name = "dupe-report"
path = "src/bin/dupe_report.rs"

[[bin]]
name = "dupe-fix-dates"
path = "src/bin/dupe_fix_dates.rs"

[[bin]]
name = "dupe-prune"
path = "src/bin/dupe_prune.rs"

[[bin]]
name = "dupe-watch"
path = "src/bin/dupe_watch.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = "1"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
kamadak-exif = "0.5"
filetime = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
videre-core = { path = "../videre-core" }
videre-ml = { path = "../videre-ml" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
videre-core = { path = "../videre-core" }
