[package]
name = "videre"
version = "0.4.1"
edition = "2021"

[lib]
name = "videre"
path = "src/lib.rs"

[[bin]]
name = "videre"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = "1"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
kamadak-exif = "0.5"
filetime = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
videre-core = { path = "../videre-core" }
videre-ml = { path = "../videre-ml" }
videre-api = { path = "../videre-api" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rmcp = { version = "2.2", features = ["transport-io"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
videre-core = { path = "../videre-core" }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.11"
